pom updates