@@ -78,28 +78,5 @@
 			</plugin>
 		</plugins>
 	</build>
-	<profiles>
-	<profile>
-		<id>open-jre-modules</id>
-		<activation>
-			<jdk>[9,]</jdk>
-		</activation>
-		<properties>
-			<!--
-                Some tests need reflective access to the internals of these packages. It is only the
-                tests themselves and not the code being tested that needs that access, though there's no
-                obvious way to ensure that.
-
-                We could consider arranging things so that only the tests we know need this would get
-                the add-opens. Right now that doesn't seem worth the effort, though.
-            -->
-			<test.add.opens>
-				--add-opens java.base/java.lang=ALL-UNNAMED
-				--add-opens java.base/java.util=ALL-UNNAMED
-				--add-opens java.base/sun.security.jca=ALL-UNNAMED
-			</test.add.opens>
-		</properties>
-	</profile>
-	</profiles>
 
 </project>
